--- a/bower.json
+++ b/bower.json
@@ -2,17 +2,18 @@
   "name": "everything-is-on-fire",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.2.0",
+    "angular": "~1.2.1",
     "json3": "~3.2.4",
     "jquery": "~1.10.0",
-    "sass-bootstrap": "~3.0.0",
     "es5-shim": "~2.1.0",
     "angular-cookies": "~1.2.0",
     "angular-sanitize": "~1.2.0",
-    "angular-route": "~1.2.0"
+    "angular-route": "~1.2.0",
+    "underscore": "~1.5.2",
+    "bootstrap": "~3.0.2"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.0",
-    "angular-scenario": "~1.2.0"
+    "angular-mocks": "~1.2.1",
+    "angular-scenario": "~1.2.1"
   }
 }
