--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "karma-coffee-preprocessor": "~0.1.0",
     "karma-phantomjs-launcher": "~0.1.0",
     "karma": "~0.10.4",
-    "karma-ng-html2js-preprocessor": "~0.1.0"
+    "karma-ng-html2js-preprocessor": "~0.1.0",
+    "bower": "~1.2.7"
   },
   "engines": {
     "node": ">=0.8.0"
@@ -47,6 +48,8 @@
   "scripts": {
     "test": "grunt test",
     "app": "./node_modules/grunt-cli/bin/grunt server",
-    "build": "./node_modules/grunt-cli/bin/grunt build"
+    "build": "./node_modules/grunt-cli/bin/grunt build",
+    "clean-deps": "rm -rf ./node_modules/; rm -rf ./app/bower_components/",
+    "setup": "npm install; ./node_modules/bower/bin/bower install"
   }
 }
